<resources>
    <string name="app_name">ThIrD EyE</string>
    <string name="add_contact">Trusted Contacts</string>
    <string name="name">Contact Name</string>
    <string name="name1">Contact Info 1:</string>
    <string name="name2">contact Info 2:</string>
    <string name="name3">Contact Info 3:</string>
    <string name="name4">Contact Info 4:</string>
    <string name="name5">Contact Info 5:</string>
    <string name="phone_number">Mobile number</string>
    <string name="submit">Submit</string>
    <string name="new_name">Click on SUBMIT to Save</string>
    <string name="heading">Login Page</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="newuser">NEW USER? Click here to REGISTER</string>
    <string name="register">Register Page</string>
    <string name="firstlast">Profile:</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="living">Address:</string>
    <string name="flat">House no./Apartment name</string>
    <string name="street">Street/Area name </string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="contact">Contact Info:</string>
    <string name="email">E-mail Address</string>
    <string name="mobile">Mobile Number</string>
    <string name="govt">Aadhar Card  </string>
    <string name="id">Identity Card:</string>
    <string name="aadhar">Aadhar Number</string>
    <string name="reg">Register</string>
    <string name="existing_user">Already a User? Log In</string>
    <string name="sos">SOS</string>
    <string name="share">CLICK ON SOS TO SEE AND SHARE YOUR LOCATION</string>
    <string name="sms">Contacts to share location</string>
    <string name="update_contact">Update Contact</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="done">Done</string>
    <string name="test">Test HTTP Connection</string>
    <string name="hos">Nearby Hospitals</string>
    <string name="ps">Nearby Police Stations</string>
    <string name="complaint">Complaint registration</string>
    <string name="Help">Helpline Numbers</string>
    <string name="Scheme">Women Schemes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_police">Map</string>
    <string name="Details">Details of Complaint</string>
    <string name="sub">Subject:</string>
    <string name="date1">Select Date</string>
    <string name="date">Date of Occurrence:</string>
    <string name="next">Next ></string>
    <string-array name="crimes">
        <item>SELECT</item>
        <item>Physical Abuse</item>
        <item>Eve Teasing</item>
        <item>Rape Attempt</item>
        <item>Ramanan type Abuse</item>
        <item>Ram Kanth</item>
    </string-array>
    <string name="occur">Place Of Occurrence:</string>
    <string name="desc">Description:</string>
    <string name="upload">Want to upload Document[Max 2MB(PDF,PNG,JPEG)]</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
