<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Complaint">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/baloo"
        android:text="@string/complaint"
        android:textAlignment="center"
        android:textColor="@color/White"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.012" />


    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:background="@drawable/side_nav_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.103">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="400dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/baloo"
                    android:text="@string/Details"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/baloo"
                    android:text="@string/sub"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="39dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/baloo"
                    android:text="@string/date"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"/>

                <CalendarView
                    android:id="@+id/calendarView"
                    android:layout_width="wrap_content"
                    android:layout_height="331dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/baloo"
                    android:text="@string/date1"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/baloo"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/occur"/>

                <EditText
                    android:id="@+id/place"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:inputType="textMultiLine"
                    android:textAlignment="textStart"
                    android:scrollbars="vertical"
                    android:background="@drawable/border"
                    android:maxLines="3"
                    android:theme="@style/edittextcolor." />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/baloo"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/desc"/>

                <EditText
                    android:id="@+id/desc"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:inputType="textMultiLine"
                    android:textAlignment="textStart"
                    android:background="@drawable/border"
                    android:scrollbars="vertical"
                    android:maxLines="3"
                    android:theme="@style/edittextcolor." />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/upload"
                    android:fontFamily="@font/baloo"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"/>
                
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    
                    <RadioButton
                        android:id="@+id/yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yes"/>

                    <RadioButton
                        android:id="@+id/no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no"/>
                    
                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"/>

            </LinearLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/register"
        android:layout_width="318dp"
        android:layout_height="49dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/contact"
        android:text="@string/reg"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.308"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.4" />

</android.support.constraint.ConstraintLayout>