<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Register">

    <ProgressBar
        android:id="@+id/indeterminateBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/baloo"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/White"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.103">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="400dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/baloo"
                    android:text="@string/firstlast"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:theme="@style/edittextcolor">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/firstname"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:drawableStart="@drawable/ic_person_black_24dp"
                        android:hint="@string/firstname"
                        android:inputType="text"
                        android:textColorHint="@color/colorPrimaryDark" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:theme="@style/edittextcolor">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/lastname"
                        android:inputType="text"
                        android:textColorHint="@color/colorPrimaryDark" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:theme="@style/edittextcolor">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:drawableStart="@drawable/ic_https_black_24dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColorHint="@color/colorPrimaryDark" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/baloo"
                    android:text="@string/living"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:theme="@style/edittextcolor">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/flat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:drawableStart="@drawable/ic_location_city_black_24dp"
                        android:hint="@string/flat"
                        android:inputType="textPostalAddress"
                        android:textColorHint="@color/colorPrimaryDark" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:theme="@style/edittextcolor">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/street"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/street"
                        android:inputType="textPostalAddress"
                        android:textColorHint="@color/colorPrimaryDark" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:theme="@style/edittextcolor">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/city"
                        android:inputType="textPostalAddress"
                        android:textColorHint="@color/colorPrimaryDark" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:theme="@style/edittextcolor">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/state"
                        android:inputType="textPostalAddress"
                        android:textColorHint="@color/colorPrimaryDark" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/baloo"
                    android:text="@string/contact"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:theme="@style/edittextcolor">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:drawableStart="@drawable/ic_email_black_24dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColorHint="@color/colorPrimaryDark" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:theme="@style/edittextcolor">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:drawableStart="@drawable/ic_phone_android_black_24dp"
                        android:hint="@string/mobile"
                        android:inputType="phone"
                        android:textColorHint="@color/colorPrimaryDark" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/baloo"
                    android:text="@string/id"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:theme="@style/edittextcolor">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/aadhar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="30dp"
                        android:drawableStart="@drawable/ic_credit_card_black_24dp"
                        android:hint="@string/aadhar"
                        android:inputType="number"
                        android:textColorHint="@color/colorPrimaryDark" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>


    <Button
        android:id="@+id/register"
        android:layout_width="318dp"
        android:layout_height="49dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/contact"
        android:text="@string/reg"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.308"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.289" />

    <TextView
        android:id="@+id/newuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:text="@string/existing_user"
        android:textAlignment="center"
        android:textColor="@color/White"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.964" />


</android.support.constraint.ConstraintLayout>